--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     var playerId = '.player';           //播放器 audio 标签
     var coverImgId = '#cover_img';      //封面图 img 标签
     /****** 音乐资源 ******/
-    var music = 'http://download.cwmoo.cn/MusicPlayerHCW/music/Voice.mp3';   //音乐资源1 （来源对象存储，我不排除清空服务器音乐文件的可能）
-    var nextMusic = 'http://download.cwmoo.cn/MusicPlayerHCW/music/Ari Pulkkinen - Title Theme.mp3';     //音乐资源2 （来源对象存储，我不排除清空服务器音乐文件的可能））
+    var music = '杨采钰 - 少年英雄小哪吒.mp3';   //音乐资源1 （来源对象存储，我不排除清空服务器音乐文件的可能）
+    var nextMusic = '呦猫UNEKO - 梦回还 (TV size).mp3';     //音乐资源2 （来源对象存储，我不排除清空服务器音乐文件的可能））
     /****** 封面图资源 ******/
     var photo = './image/1.jpg';        //封面图1
     var nextPhoto = './image/2.jpg';    //封面图2
@@ -88,8 +88,6 @@
         var btnPlay = document.querySelector('#btnPlay');
         btnPlay.addEventListener('click',function () {
             player.play();
-
-            console.log(player.getSpeed());
             /*
             player.play().setActionsAfterPlayback({     //设置播放完毕后执行的动作
                 'id':123,
@@ -190,6 +188,11 @@
             playStatus.innerHTML = '正在播放';
         },function () {
             playStatus.innerHTML = '无播放';
+        });
+
+        //播放完成后触发
+        player.addAfterPlayingListener(function () {
+            player.setMusic(nextMusic).setCoverImage(nextPhoto).change().play();
         });
     };
 </script>
