修正案例错误

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         //初始化，监听进度条
         player.addProgressEventListener('#progressMusic','.startTime','.endTime');
         //初始化，监听音量控制条
-        player.addVolumeProgressEventListener('#control_strip_volume','height');
+        player.addVolumeProgressEventListener('#control_strip_volume');
         //初始化，监听缓冲条
         player.addBufferedProgressEventListener('#buffered');
         //初始化，监听播放状态
