动作监听的改善

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     var playerId = '.player';           //播放器 audio 标签
     var coverImgId = '#cover_img';      //封面图 img 标签
     /****** 音乐资源 ******/
-    var music = 'http://oss.myyuming.cn/test2.mp3';   //音乐资源1 （来源对象存储，我不排除清空服务器音乐文件的可能）
-    var nextMusic = 'http://oss.myyuming.cn/test1.mp3';     //音乐资源2 （来源对象存储，我不排除清空服务器音乐文件的可能））
+    var music = 'http://oss.myyuming.cn/test2.mp3';   //音乐资源1 （来源对象存储，我不排除清空对象存储音乐文件的可能）
+    var nextMusic = 'http://oss.myyuming.cn/test.mp3';     //音乐资源2 （来源对象存储，我不排除清空对象存储音乐文件的可能）
     /****** 封面图资源 ******/
     var photo = './image/1.jpg';        //封面图1
     var nextPhoto = './image/2.jpg';    //封面图2
@@ -87,21 +87,29 @@
         //播放按钮
         var btnPlay = document.querySelector('#btnPlay');
         btnPlay.addEventListener('click',function () {
-            player.play();
-            /*
-            player.play().setActionsAfterPlayback({     //设置播放完毕后执行的动作
+            // player.play();
+            //设置播放完毕后执行的动作
+            let object = {
                 'id':123,
                 'name':'愤怒的小鸟'
-            },function (object) {
+            };
+            player.play().setActionsAfterPlayback('play',function () {
                 console.log(object)
             });
-            */
         });
 
         //暂停按钮
         var btnPause = document.querySelector('#btnPause');
         btnPause.addEventListener('click',function () {
             player.pause();
+
+            let object = {
+                'id':123,
+                'name':'愤怒的小鸟'
+            };
+            player.pause().setActionsAfterPlayback(function () {
+                console.log(object)
+            });
         });
 
         //停止按钮
@@ -190,8 +198,8 @@
             playStatus.innerHTML = '无播放';
         });
 
-        //播放完成后触发
-        player.addAfterPlayingListener(function () {
+        //播放完成后执行的动作（请注意，这不是监听器，可以设置在程序里面，且可以无限次设置）
+        player.setActionsAfterPlayback('other',function () {
             player.setMusic(nextMusic).setCoverImage(nextPhoto).change().play();
         });
     };
